src/test/deca/context/valid/tests/11_ReadInt.deca
// Description:
//    Test ReadInt()
//
// Historique:
//    cree le 16/01/2022

{
        int x = readInt();
}
